feat: v0.4.7 updates
